--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,7 @@
-{% include "header.html" %}
+{% extends 'base.html' %}
 
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('https://picsum.photos/1920/1080/">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="site-heading">
-            <h1>Kevin's Blog</h1>
-            <span class="subheading">A collection of random musings.</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- Main Content -->
+{% block content %}
+ <!-- Main Content -->
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
@@ -52,5 +38,4 @@
     </div>
   </div>
   <hr>
-
-{% include "footer.html" %}
+{% endblock %}
