--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -1,4 +1,4 @@
-{% extends 'bootstrap/base.html' %}
+{% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
@@ -31,6 +31,4 @@
       </div>
     </div>
   </div>
-
-{% include "footer.html" %}
 {% endblock %}
