--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
             <tbody>
             <!-- Programming Skills -->
             <tr>
-                <td>Python</td>
+                <td><i class="fa-brands fa-python"></i> Python</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 75%"
@@ -35,7 +35,7 @@
                 </td>
             </tr>
             <tr>
-                <td>Javascript</td>
+                <td><i class="fa-brands fa-js"></i> Javascript</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 15%"
@@ -47,7 +47,7 @@
             </tr>
             <!-- Design Skills -->
             <tr>
-                <td>Photoshop</td>
+                <td><i class="fa-solid fa-eye-dropper"></i> Photoshop</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-info" role="progressbar" style="width: 65%"
@@ -58,7 +58,7 @@
                 </td>
             </tr>
             <tr>
-                <td>Illustrator</td>
+                <td><i class="fa-solid fa-pen-nib"></i> Illustrator</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-info" role="progressbar" style="width: 65%"
@@ -70,7 +70,7 @@
             </tr>
             <!-- Data Science Skills -->
             <tr>
-                <td>Matplotlib</td>
+                <td><i class="fa-solid fa-chart-simple"></i> Matplotlib</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-warning" role="progressbar" style="width: 55%"
@@ -81,7 +81,7 @@
                 </td>
             </tr>
             <tr>
-                <td>Numpy</td>
+                <td><i class="fa-solid fa-cubes"></i> Numpy</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-warning" role="progressbar" style="width: 55%"
@@ -92,7 +92,7 @@
                 </td>
             </tr>
             <tr>
-                <td>Pandas</td>
+                <td><i class="fa-solid fa-table"></i> Pandas</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-warning" role="progressbar" style="width: 55%"
@@ -104,7 +104,7 @@
             </tr>
             <!-- Web Development Skills -->
             <tr>
-                <td>HTML</td>
+                <td><i class="fa-brands fa-html5"></i> HTML</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-success" role="progressbar" style="width: 70%"
@@ -115,7 +115,7 @@
                 </td>
             </tr>
             <tr>
-                <td>CSS</td>
+                <td><i class="fa-brands fa-css3-alt"></i> CSS</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-success" role="progressbar" style="width: 65%"
@@ -126,7 +126,7 @@
                 </td>
             </tr>
             <tr>
-                <td>Bootstrap</td>
+                <td><i class="fa-brands fa-bootstrap"></i> Bootstrap</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-success" role="progressbar" style="width: 70%"
@@ -137,7 +137,7 @@
                 </td>
             </tr>
             <tr>
-                <td>Flask</td>
+                <td><i class="fa-solid fa-pepper-hot"></i> Flask</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-success" role="progressbar" style="width: 60%"
@@ -151,7 +151,7 @@
             <tr>
             </tr>
             <tr>
-                <td>SQLite</td>
+                <td><i class="fa-solid fa-database"></i> SQLite</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-danger" role="progressbar" style="width: 45%"
@@ -163,7 +163,7 @@
             </tr>
             <!-- Selenium - Cross-category tool -->
             <tr>
-                <td>Selenium</td>
+                <td><i class="fa-solid fa-at"></i> Selenium</td>
                 <td>
                     <div class="progress">
                         <div class="progress-bar bg-secondary" role="progressbar" style="width: 45%"
