# about.html 'Show Skill Stacks' btn's caret icon change when expanded(collapsed) ✓ # make 'home.html' # link flask app with htmls properly

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,16 +4,15 @@
 {% block content %}
 <div class="row">
     <div class="col d-flex justify-content-center">
-        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
-           aria-controls="collapseExample" style="width:70%;">
+        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" style="width:70%;">
             Show Skill Stacks
+            <i class="fa-solid fa-caret-down"></i> <!-- Place the icon inside a span for easier targeting -->
         </a>
     </div>
 </div>
 </p>
 <div class="collapse" id="collapseExample">
     <div class="container mt-5">
-        <h2>My Skill Stacks</h2>
         <table class="table">
             <thead>
             <tr>
