--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,8 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/about">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/about">Skill Stacks</a></li>
+                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/portfolio">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
 
                 </ul>
@@ -54,7 +55,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    <h1>Portfolio</h1>
+                    <h1>{{ masthead_text }}</h1>
                 </div>
             </div>
         </div>
@@ -108,8 +109,9 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="small text-center text-muted fst-italic mt-3">&copy; 김지우 포트폴리오
-                        2024
+                    <div class="small text-center text-muted fst-italic mt-3">&copy; JiwooHub
+                        2024 <br><strong>Phone:</strong>
+                    010-2872-2066</p>
                     </div>
                 </div>
             </div>
