# change body font to 'ROBOTO' # build index.html contents # Korean as default in introduction.html, skill-stacks.html # add python-scripting.html for first post # contact.html # '/contact' SMTP submission

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,9 @@
     <!-- Font Awesome icons (free version)-->
 <script src="https://kit.fontawesome.com/43848acd7b.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
-          type="text/css"/>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
-          rel="stylesheet" type="text/css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href={{css_url}} rel="stylesheet"/>
     <!-- Custom styles for this template -->
@@ -33,7 +32,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="/">JiwooHub</a>
+            <a class="navbar-brand" href="/"><img src="static/img/JiwooHub.png" alt="Your Portrait" class="product-image" style="width: 1.7rem; margin-bottom: 0.2rem;">JiwooHub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -42,8 +41,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/about">Skill Stacks</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/skill-stacks">Skill Stacks</a></li>
                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/introduction">Introduction</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
 
                 </ul>
@@ -54,8 +54,11 @@
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="site-heading">
+                <div class="site-heading mt-auto">
                     <h1>{{ masthead_text }}</h1>
+                    <div class="subheading">
+                        {{ subheading_text }}
+                    </div>
                 </div>
             </div>
         </div>
