--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,41 +1,39 @@
 {% extends 'base.html' %}
 
 {% block content %}
- <!-- Main Content -->
-  <div class="container">
+<!-- Main Content -->
+<div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        {% for post in all_posts %}
-        <div class="post-preview">
-          <a href="{{ url_for('show_post', post_id=post.id) }}">
-            <h2 class="post-title">
-              {{post.title}}
-            </h2>
-            <h3 class="post-subtitle">
-              {{post.subtitle}}
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">{{post.author}}</a>
-            on {{post.date}}
-          {% if current_user.is_admin %}
-            <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
-          {% endif %}
-          </p>
-        </div>
-        <hr>
-        {% endfor %}
+        <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="post-preview">
+                <a href="#">
+                    <h2 class="post-title">
+                        title
+                    </h2>
+                    <h3 class="post-subtitle">
+                        subtitle
+                    </h3>
+                </a>
+                <p class="post-meta">Posted by
+                    <a href="#">author</a>
+                    date
+                    {% if current_user.is_admin %}
+                    <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
+                    {% endif %}
+                </p>
+            </div>
+            <hr>
 
 
-        <!-- New Post -->
-        <div class="clearfix">
-          {% if current_user.is_admin %}
-          <a class="btn btn-primary float-left" href="{{url_for('gen_post')}}">Generate Post</a>
-          {% endif %}
-          <a class="btn btn-primary float-right" href="{{url_for('add_new_post')}}">Create New Post</a>
+            <!-- New Post -->
+            <div class="clearfix">
+                {% if current_user.is_admin %}
+                <a class="btn btn-primary float-left" href="{{url_for('gen_post')}}">Generate Post</a>
+                {% endif %}
+                <a class="btn btn-primary float-right" href="{{url_for('add_new_post')}}">Create New Post</a>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <hr>
+</div>
+<hr>
 {% endblock %}
