--- a/templates/post.html
+++ b/templates/post.html
@@ -5,32 +5,31 @@
 <!-- Post Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="col-lg-8 col-md-10 mx-auto post">
                 {{ post.body|safe }}
-                <hr>
                 {% if editor_auth or current_user.is_admin %}
                 <div class="clearfix">
-                    <a class="btn btn-primary float-right" href="{{url_for('edit_post', post_id=post.id)}}">Edit
-                        Post</a>
+                    <a class="btn btn-primary btn-sm float-right" href="{{url_for('edit_post', post_id=post.id)}}">Edit Post</a>
                 </div>
+                <hr>
                 {% endif %}
                 <!--           Comments Area -->
                 <div class="col-lg-8 col-md-10 mx-auto comment">
-                    <ul class="commentList">
+                    <ul class="list-group">
                         {% for comment in comments %}
                         {% if comment %}
-                        <li>
+                        <li class="list-group-item">
                             <div class="commenterImage">
-                                <img src="https://picsum.photos/{{ loop.index }}00/{{ loop.index }}00"/>
+                                <img src="https://picsum.photos/3{{ loop.index }}/3{{ loop.index }}"/>
                             </div>
                             <div class="commentText">
                                 <p>{{ comment.text|safe }}</p>
                                 <span class="date sub-text">{{ comment.blogpost.user.name|safe }}</span>
                                 {% if current_user.is_authenticated %}
+                                <hr>
                                 <a href="{{url_for('delete_comment', post_id=post.id, text=comment.text) }}">✘</a>
                                 {% endif %}
                             </div>
-                            <hr>
                         </li>
                         {% endif %}
                         {% endfor %}
@@ -45,15 +44,9 @@
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
             <div class="post-heading">
-                <h1>{{post.title}}</h1>
-                <h2 class="subheading">{{post.subtitle}}</h2>
-                <span class="meta">Posted by
-              <a href="#">{{name}}</a>
-              on {{post.date}}</span>
-                {{ ckeditor.load() }}
-                {{ ckeditor.config(name=body) }}
                 <form method="POST" action="{{ url_for('comment', post_id=post.id) }}" id="my-form">
-                    {{ wtf.quick_form(comment_form, novalidate=True, button_map={"submit": "primary"}) }}
+                    {{ wtf.quick_form(comment_form, button_map={'submit': 'btn btn-primary btn-sm mt-3'})}}
+                </form>
             </div>
         </div>
     </div>
