# skill-stacks.html: fix skill stack's collapse btn logic ✓ # clean-blog.min.css: mobile-friendly btn, navbar, font-size, margin setting ✓

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container mt-5">
+
+<div class="container-xxl">
   <div class="row align-items-center text-center justify-content-center d-flex">
     <!-- Product Info Column -->
-    <div class="col-md-8">
+    <div class="col-md-12">
       <h1>Jiwoo Kim</h1>
       <p class="lead" style="font-style: italic;">Developer Dreamer</p>
       <p>
