--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 {% endwith %}
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
-    <div class="container px-2 px-lg-5">
+    <div class="container-xxl px-2 px-lg-5">
         <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='img/JiwooHub.png') }}"
                                               alt="Your Portrait" class="product-image"
                                               style="width: 1.7rem; margin-bottom: 0.2rem;">JiwooHub</a>
@@ -62,7 +62,7 @@
     </div>
 </nav>
 <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/졸업사진1.jpg') }}')">
-    <div class="container position-relative px-4 px-lg-5">
+    <div class="container-xxl position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading mt-auto">
@@ -84,7 +84,7 @@
 
 <footer>
     <div class="border-top">
-        <div class="container px-4 px-lg-5 mt-5 mb-5">
+        <div class="container-xxl px-4 px-lg-5 mt-5 mb-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <ul class="list-inline text-center">
@@ -151,7 +151,8 @@
     </div>
 
 </footer>
-
+<!--JQuery-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- Bootstrap core JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
