--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container mt-5">
+<div class="container-xxl">
         <button class='btn btn-danger btn-sm mb-3 float-right' id="toggleLang">한/A</button>
     <div id="englishContent" class="language-content" style="display:none;">
         <div class="row">
