--- a/templates/skill-stacks.html
+++ b/templates/skill-stacks.html
@@ -4,9 +4,9 @@
 {% block content %}
 <div class="row">
     <div class="col d-flex justify-content-center">
-        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
+        <a id='toggleButton' class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
            aria-controls="collapseExample" style="width:70%;">
-            Show Skill Stacks
+            Hide Skill Stacks
             <i class="fa-solid fa-caret-up"></i> <!-- Place the icon inside a span for easier targeting -->
         </a>
     </div>
@@ -178,8 +178,8 @@
     </div>
 </div>
 <!-- Resume Content-->
-<div class="container mt-5">
-    <button class='btn btn-danger btn-sm mb-3 float-right' id="toggleLang">한/A</button>
+<div class="container-xxl mt-5">
+    <button class='btn btn-danger btn-sm me-5 float-right' id="toggleLang">한/A</button>
     <div id="englishContent" class="language-content" style="display:none;">
         <div class="row justify-content-center">
             <div class="col-md-10">
