--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
       <h1>Jiwoo Kim</h1>
       <p class="lead" style="font-style: italic;">Developer Dreamer</p>
       <p>
-"Passion is energy. Feel the power that comes from focusing on what excites you."</p>
+"Passion is energy. Feel the power that comes from focusing on what excites me."</p>
       <a href="/portfolio" class="apple-a me-5">Portfolio＞</a>
       <a href="skill-stacks" class="apple-a ms-5">Skill Stack＞</a>
     </div>
