--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -2,13 +2,15 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
-  <div class="container">
+<div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        {{ ckeditor.load() }}
-        {{ ckeditor.config(name='body') }}
-        {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
-      </div>
+        <div class="col-lg-8 col-md-10 mx-auto">
+            {{ ckeditor.load() }}
+            {{ ckeditor.config(name='body') }}
+            <div class="container mt-3">
+                {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+            </div>
+        </div>
     </div>
-  </div>
+</div>
 {% endblock %}
