--- a/templates/post.html
+++ b/templates/post.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-6">
                 </div>
-                <div class="col-6">
+                <div class="col-6 mb-5">
                     <button class='btn btn-danger btn-sm me-5 float-right' id="toggleLang">한/A</button>
                 </div>
             </div>
